fix bug with binding priority